--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "geoip-lite": "^1.4.10",
     "googleapis": "^144.0.0",
     "mongoose": "^7.0.0",
     "passport": "^0.6.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.1",
+    "@types/geoip-lite": "^1.4.4",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.4",
