--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.1",
     "@types/geoip-lite": "^1.4.4",
