--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "node dist/app.js",
     "dev": "ts-node-dev src/app.ts",
     "build": "tsc",
-    "prepare": "husky"
+    "prepare": "husky",
+    "seed": "node dist/seed/index.js"
   },
   "dependencies": {
+    "connect-redis": "^8.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
@@ -19,6 +21,7 @@
     "mongoose": "^7.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "redis": "^4.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "unique-names-generator": "^4.7.1",
